--- a/.gitignore
+++ b/.gitignore
@@ -72,3 +72,16 @@ Plugins/*/Intermediate/*
 
 # Cache files for the editor to use
 DerivedDataCache/*
+
+# PBGet
+Binaries/
+/Intermediate
+.DS_Store
+
+### whitelisted files
+!Resources/*
+!Screenshots/*
+!git-lfs.exe
+!git-lfs
+!git-lfs-mac-amd64
+!git-lfs-mac-arm64
