--- a/.gitattributes
+++ b/.gitattributes
@@ -1,37 +1,13 @@
-[attr]lock filter=lfs diff=lfs merge=binary -text lockable
-[attr]lockonly lockable
-[attr]lfs filter=lfs diff=lfs merge=binary -text
-[attr]lfstext filter=lfs diff=lfstext merge=lfstext -text
+# UE file types
+*.uasset filter=lfs diff=lfs merge=lfs -text
+*.umap filter=lfs diff=lfs merge=lfs -text
 
-# Unreal Engine file types.
-*.uasset lock
-*.umap lock
-*.locres lfs
-*.locmeta lfs
-
-# Steam Audio files
-*.phononscene lfs
-*.probebox lfs
-*.probebatch lfs
-*.bakedsources lfs
-
-# Binaries
-*.exe lfs
-*.dll lfs
-*.rcc lfs
-
-# FMOD
-*.bank lfs
-*.wav lfs
-*.mp3 lfs
-*.ogg lfs
-*.flac lfs
-
-# Icons
-*.png lfs
-*.ico lfs
-*.icns lfs
-
-# Movies
-*.bk2 lfs
-iniLFS.tmp filter=lfs diff=lfs merge=lfs -text
+# Raw Content types
+*.fbx filter=lfs diff=lfs merge=lfs -text
+*.3ds filter=lfs diff=lfs merge=lfs -text
+*.psd filter=lfs diff=lfs merge=lfs -text
+*.png filter=lfs diff=lfs merge=lfs -text
+*.mp3 filter=lfs diff=lfs merge=lfs -text
+*.wav filter=lfs diff=lfs merge=lfs -text
+*.xcf filter=lfs diff=lfs merge=lfs -text
+*.jpg filter=lfs diff=lfs merge=lfs -text
