Improved game mode HUD

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,12 +3,17 @@ GameName=H23_UEJ3_Equipe04
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Maps/LVL_InGame.LVL_InGame
-GameDefaultMap=/Game/Maps/LVL_InGame.LVL_InGame
-TransitionMap=
+LocalMapOptions=
+TransitionMap=None
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
 ThreePlayerSplitscreenLayout=FavorTop
-GlobalDefaultGameMode=/Game/ThirdPerson/Blueprints/BP_ThirdPersonGameMode.BP_ThirdPersonGameMode_C
+FourPlayerSplitscreenLayout=Grid
+bOffsetPlayerGamepadIds=False
+GameInstanceClass=/Script/Engine.GameInstance
+GameDefaultMap=/Game/Maps/LVL_InGame.LVL_InGame
+ServerDefaultMap=/Engine/Maps/Entry.Entry
+GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
