--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -13,7 +13,7 @@ bOffsetPlayerGamepadIds=False
 GameInstanceClass=/Script/Engine.GameInstance
 GameDefaultMap=/Game/Maps/MainMenu/LVL_MainMenu.LVL_MainMenu
 ServerDefaultMap=/Engine/Maps/Entry.Entry
-GlobalDefaultGameMode=/Game/Blueprints/GameMode/BP_GameMode_TimeLimit.BP_GameMode_TimeLimit_C
+GlobalDefaultGameMode=None
 GlobalDefaultServerGameMode=None
 
 [/Script/Engine.RendererSettings]
