Set build configuration to Shipping and target Windows platform

--- a/Config/DefaultGame.ini
+++ b/Config/DefaultGame.ini
@@ -8,3 +8,8 @@ ProjectDisplayedTitle=NSLOCTEXT("[/Script/EngineSettings]", "B66D5C4842293E9342C
 ProjectDebugTitleInfo=
 ProjectVersion=0.01a
 
+[/Script/UnrealEd.ProjectPackagingSettings]
+BuildConfiguration=PPBC_Shipping
+FullRebuild=True
+ForDistribution=True
+
